add: add a new page

--- a/sobre.html
+++ b/sobre.html
@@ -8,9 +8,26 @@
     <link rel="stylesheet" href="css/sobre.css">
 </head>
 <body>
-    <img src="img/logo.png" alt="Logo da empresa">
+    <header class="cabecalho">
+        <h1><img src="img/logo.png" alt="Mirror Fashion"></h1>
 
-    <h1>A Mirror Fashion</h1>
+        <p class="sacola">
+            Nenhum item na sacola de compras
+        </p>
+
+        <nav class="menu-opcoes">
+            <ul>
+                <li><a href="#">Sua conta</a></li>
+                <li><a href="#">Lista de desejos</a></li>
+                <li><a href="#">Cartão fidelidade</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="#">Ajuda</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <h1 class="sobre-back">A Mirror Fashion</h1>
 
         <p>
             A <b>Mirror Fashion</b> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
